--- a/WebOnlineCheckFrontEnd/index.html
+++ b/WebOnlineCheckFrontEnd/index.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Web编程实验 提交网站</title>
+    <!-- 引入样式 -->
+    <link rel="stylesheet" href="https://unpkg.com/element-ui@2.4.4/lib/theme-chalk/index.css">
+
   </head>
   <body>
     <div id="app"></div>
+    <!-- 引入组件库 -->
+    <script src="https://unpkg.com/element-ui@2.4.4/lib/index.js"></script>
     <script src="static/diff.js"></script>
   </body>
 </html>
