--- a/WebOnlineCheckFrontEnd/index.html
+++ b/WebOnlineCheckFrontEnd/index.html
@@ -7,8 +7,13 @@
     <script src="https://unpkg.com/vue@2.5.3/dist/vue.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.6/lib/theme-chalk/index.css">
     <script src="https://unpkg.com/element-ui@2.15.6/lib/index.js"></script>
+    <style>
+      #body-container{
+        margin: 0;
+      }
+    </style>
   </head>
-  <body>
+  <body id="body-container">
     <div id="app"></div>
     <!-- 引入组件库 -->
     <script src="static/diff.js"></script>
