样式调整+执行学生代码的变量共享下放

--- a/WebOnlineCheckFrontEnd/index.html
+++ b/WebOnlineCheckFrontEnd/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Web编程实验 提交网站</title>
-    <script src="https://unpkg.com/vue@2.5.3/dist/vue.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.6/lib/theme-chalk/index.css">
-    <script src="https://unpkg.com/element-ui@2.15.6/lib/index.js"></script>
-    <style>
-      #body-container{
-        margin: 0;
-      }
-    </style>
-  </head>
-  <body id="body-container">
-    <div id="app"></div>
-    <!-- 引入组件库 -->
-    <script src="static/diff.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Web编程实验 提交网站</title>
+  <script src="https://unpkg.com/vue@2.5.3/dist/vue.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.6/lib/theme-chalk/index.css">
+  <script src="https://unpkg.com/element-ui@2.15.6/lib/index.js"></script>
+  <script src="https://unpkg.com/driver.js/dist/driver.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/driver.js/dist/driver.min.css">
+  <style>
+    #body-container {
+      margin: 0;
+    }
+
+  </style>
+</head>
+
+<body id="body-container">
+  <div id="app"></div>
+  <!-- 引入组件库 -->
+  <script src="static/diff.js"></script>
+</body>
+
 </html>
